--- a/Wpf/Wpf/App.xaml
+++ b/Wpf/Wpf/App.xaml
@@ -4,6 +4,8 @@
              xmlns:local="clr-namespace:Wpf"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="Button" x:Key="mainBtm">
+            
+        </Style>
     </Application.Resources>
 </Application>
